--- a/main.css
+++ b/main.css
@@ -13,6 +13,14 @@ header{
     top: 15px; 
     z-index: 1;
 }
+.navegador.active{
+    display: flex;
+    flex-wrap: wrap;
+    height: 60px;
+    border-radius: 15px;
+    transition: all 0.3s ease-in-out;
+    transform: translateY(-5px);
+}
 
 /*** ACA COMIENZA EL ESTILO DEL NAVEGADOR***/
 
