--- a/main.css
+++ b/main.css
@@ -676,22 +676,68 @@ button{
     margin-right: 700px;
 }
 .piecito img{
-    width: 35px;
-    height: 35px;
-    margin-left: 30px; 
+    width: 33px;
+    height: 45px;
+    margin-left: 7px;
+    padding: 5px;
 }
 .estiloContacto{
     min-height: 550px;
     background-color: #c0bdbd;
 }
-.Redes img{
-   height: 40px;
-   width: 40px; 
+
+/* estilo iconos de redes sociales*/
+
+.iconoFacebook{
+    display: flex;
+    width: 50px;
+    height: 50px;
+    border: solid;
+    border-radius: 10px;
+    margin-right: 5px;
 }
-.piecito img:hover{
-    transform: scale(1.3) translateY(-8px);
-    transition: .2s;
+
+.iconoFacebook:hover{
+    background-color: #1317fc;
+    transform: scale(1.3) rotate(360deg);
+    border-radius: 40px;
+    transition:.5s
+}
+/* aca empieza instagram*/
+
+.iconoInstagram{
+    display: flex;
+    width: 50px;
+    height: 50px;
+    border: solid;
+    border-radius: 10px;
+    margin-right: 5px;
+}
+
+.iconoInstagram:hover{
+    background-color: #e42474;
+    transform: scale(1.3) rotate(360deg);
+    border-radius: 40px;
+    transition:.5s
     
+}
+/* aca empieza whatsapp*/
+
+.iconoWhatsapp{
+    width: 50px;
+    height: 50px;
+    border: solid;
+    border-radius: 10px;
+}
+
+.iconoWhatsapp:hover{
+    background-color: #3f9b3c;
+    transform: scale(1.3) rotate(360deg);
+    border-radius: 40px;
+    transition:.5s
+}
+.imagenIconoWtp{
+    margin-right: 5px;
 }
 .wpp{
     position: fixed;
@@ -704,8 +750,7 @@ button{
     transform: scale(1.3);
     transition: .3s;
 }
-/*** aprender como conectar el submit del formulario con el mail --- lograr que el enlace de facebook me lleve alli ---- ver si logro hacer mis propios iconos de redes sociales para darles un hover copado.
-    
+/*** aprender como conectar el submit del formulario con el mail -    
 
 
 
